--- a/コーディング/index.html
+++ b/コーディング/index.html
@@ -210,6 +210,15 @@
       </div>
     </div>
   </body>
-
-
 </html>
+
+<script>
+$(function() {
+//処理を書く部分
+  /*セレクタ＝どの要素に処理を適用するかを表す部分
+    .col-img3がセレクタ。クラスには"."、idには"#"をつける*/
+  $(".col-img3").mouseover(function() {
+      alert('Hello');
+  });
+});
+</script>
