--- a/コーディング/index.html
+++ b/コーディング/index.html
@@ -217,8 +217,19 @@ $(function() {
 //処理を書く部分
   /*セレクタ＝どの要素に処理を適用するかを表す部分
     .col-img3がセレクタ。クラスには"."、idには"#"をつける*/
-  $(".col-img1").mouseover(function() {
-      alert('Hello');
-  });
+    $(".col-img1").mouseover(function() {
+        $(".col-img1").toggle(function() {
+            $(".col-img1").animate({
+                width: 800,
+                height: 600
+            },
+            500);
+        },function(){
+            $(".col-img1").animate({
+                width: 600,
+                height: 400
+            }, 200);
+        });
+    });
 });
 </script>
